--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
-  <link rel=""
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src=""
 </head>
 <body>
   <header>
